# linjat

./: CMakeLists.txt  LICENSE  README.md  build-puzzle-collection.pl  deploy.pl  gen.sh  pics.sh  solve_from_db.pl  solve_from_db.sh  vis.pl
puzzledb/: h=10_w=7_p=15  h=10_w=7_p=15_cv=1_cf=3_sq=0_dep=0  h=10_w=7_p=16  h=10_w=7_p=16_cv=1_cf=3_sq=0_dep=0  h=10_w=7_p=17  h=10_w=7_p=17_cv=1_cf=3_sq=0_dep=0  h=10_w=7_p=18  h=10_w=7_p=18_cv=1_cf=3_sq=0_dep=0  h=10_w=7_p=19  h=10_w=7_p=19_cv=1_cf=3_sq=0_dep=0  h=10_w=7_p=20  h=10_w=7_p=20_cv=1_cf=3_sq=0_dep=0  h=11_w=8_p=19--disallow_basic  h=11_w=8_p=19_cv=1_cf=3_sq=50_dep=0  h=11_w=8_p=20--disallow_basic  h=11_w=8_p=20_cv=1_cf=3_sq=50_dep=0  h=11_w=8_p=21--disallow_basic  h=11_w=8_p=21_cv=1_cf=3_sq=50_dep=0  h=11_w=8_p=22--disallow_basic  h=11_w=8_p=22_cv=1_cf=3_sq=50_dep=0  h=13_w=9_p=23--disallow_basic--disallow_only_square  h=13_w=9_p=23_cv=1_cf=3_sq=50_dep=100  h=13_w=9_p=23_cv=1_cf=3_sq=50_dep=100_of=60  h=13_w=9_p=24--disallow_basic--disallow_only_square  h=13_w=9_p=24_cv=1_cf=3_sq=50_dep=100  h=13_w=9_p=24_cv=1_cf=3_sq=50_dep=100_of=60  h=13_w=9_p=25--disallow_basic--disallow_only_square  h=13_w=9_p=25_cv=1_cf=3_sq=50_dep=100  h=13_w=9_p=25_cv=1_cf=3_sq=50_dep=100_of=60  h=13_w=9_p=26--disallow_basic--disallow_only_square  h=13_w=9_p=26_cv=1_cf=3_sq=50_dep=100  h=13_w=9_p=26_cv=1_cf=3_sq=50_dep=100_of=60  h=9_w=6_p=10  h=9_w=6_p=10_cv=1_cf=1_sq=0_dep=0  h=9_w=6_p=10_cv=1_cf=3_sq=0_dep=0  h=9_w=6_p=7  h=9_w=6_p=7_cv=1_cf=1_sq=0_dep=0  h=9_w=6_p=7_cv=1_cf=3_sq=0_dep=0  h=9_w=6_p=8  h=9_w=6_p=8_cv=1_cf=1_sq=0_dep=0  (+4 more)
src/: main.cc
www/: game.css  game.js  index.html
www/data/: puzzles.json
www/stc/: game.css  game.js
